--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="billsedison">
     <meta name="description" content="Clone of the Stack game | Samuel Yusuf">
     <link rel="stylesheet" href="style.css">
-    <script src="src/index.js"></script>
+    <script src="build/bundle.js"></script>
 </head>
 <body>
     <meta name="viewport" content="width=device-width,user-scalable=no">
